Completed to send User Email verification Email

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsx watch ./src/server.ts"
+    "dev": "tsx watch ./src/server.ts",
+    "build": "tsc && copyfiles -u 3 src/app/util/templates/**/* dist/app/util/templates"
   },
   "keywords": [],
   "author": "",
@@ -15,10 +16,14 @@
     "@types/bcrypt": "^6.0.0",
     "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
+    "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.3",
+    "@types/nodemailer": "^7.0.5",
     "@types/pg": "^8.16.0",
+    "copyfiles": "^2.4.1",
+    "ejs": "^4.0.1",
     "prisma": "^7.2.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
@@ -29,10 +34,13 @@
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "http-status": "^2.1.0",
     "jsonwebtoken": "^9.0.3",
-    "pg": "^8.16.3"
+    "nodemailer": "^7.0.12",
+    "pg": "^8.16.3",
+    "redis": "^5.10.0"
   }
 }
